Deal with timespecs properly in futimens and utimensat. PR/48060